@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-05-22] RFC4880: stored packet version within TMCG_OpenPGP_Message
 * [2019-05-20] RFC4880: fixed wrong iterated KDF computation in S2KCompute()
 * [2019-05-20] RFC4880: changed interface of HashCompute()
 * [2019-05-15] RFC4880: added public member version to TMCG_OpenPGP_PKESK
